Removed Some Print statements and also edited the build config so that it should run properly without too much extra config

--- a/build.gradle
+++ b/build.gradle
@@ -34,5 +34,5 @@ dependencies {
 }
 
 application {
-    mainClassName = project.hasProperty("mainClass") ? project.getProperty("mainClass") : "lab08.tempconvertermvc.TempConverterMain"
+    mainClassName = project.hasProperty("mainClass") ? project.getProperty("mainClass") : "Main.Main"
 }
